k8s-specifications/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins:2.60.3
        #   limits:
        # resources:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /var/jenkins_home
            name: jenkins-data 
      volumes:
        - name: jenkins-data
          hostPath:
            path: /home/docker/volumen-jenkins
