k8s-specifications/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: devops
spec:
  selector:
    app: jenkins-deployment
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32000
