k8s-specifications/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devops
  labels:
    name: jenkins-ingress
spec:
  rules:
  - host: my-jenkins.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: <Service>
            port: 
              number: <Port>
